# AOC-2022

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  vcpkg.json
include/: InputDirectoryConfig.ipp.in  Utilities.ipp
solutions/: CMakeLists.txt
src/: ACSolver.ipp  CMakeLists.txt.in  EntryPoint.ipp  Export.hpp  HttpsRequest.cpp  HttpsRequest.h  HttpsRequest.hpp  InputDirectoryConfig.hpp.in  InputDirectoryConfig.ipp.in  Solution.cpp.in  StartNewDay.cpp  Utilities.cpp  Utilities.ipp
triplets/: x64-windows.cmake
